# nyx

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-iso.yml
docs/: architecture.md  contributing.md
nyx-auth/: Cargo.toml
nyx-auth/src/: main.rs
nyx-base/: packages.txt
nyx-branding/: README.md
nyx-compositor/: Cargo.toml
nyx-compositor/src/: animation.rs  input.rs  main.rs  output.rs  renderer.rs  state.rs  window.rs  workspace.rs
nyx-hw/: Cargo.toml
nyx-hw/src/: main.rs
nyx-iso/: build.sh  profiledef.sh
nyx-portal/: Cargo.toml
nyx-portal/src/: main.rs
nyx-session/: Cargo.toml
nyx-session/src/: main.rs
nyx-settings/nyx-settings-ui/: Cargo.toml
nyx-settings/nyx-settings-ui/src/: main.rs
nyx-settings/nyx-settingsd/: Cargo.toml
nyx-settings/nyx-settingsd/src/: main.rs
nyx-shell/: Cargo.toml
nyx-shell/src/: control_center.rs  dock.rs  icon.rs  launcher.rs  main.rs  notifications.rs  top_bar.rs
nyx-updater/: Cargo.toml
nyx-updater/src/: main.rs
nyx-widgets/: Cargo.toml
nyx-widgets/src/: button.rs  card.rs  color_picker.rs  context_menu.rs  lib.rs  list.rs  modal.rs  progress.rs  sidebar.rs  slider.rs  tabs.rs  text_input.rs  theme.rs  toast.rs  toggle.rs  tooltip.rs
