[workspace]
resolver = "2"
members = [
    "nyx-compositor",
    "nyx-shell",
    "nyx-widgets",
    "nyx-settings/nyx-settingsd",
    "nyx-settings/nyx-settings-ui",
    "nyx-updater",
    "nyx-hw",
    "nyx-portal",
    "nyx-session",
    "nyx-auth",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/nyx-os/nyx"
rust-version = "1.85"

[workspace.dependencies]
# UI Framework
iced = { version = "0.14", features = ["canvas", "svg", "image", "tokio", "advanced"] }
iced_runtime = "0.14"
iced_core = "0.14"

# GPU Rendering
wgpu = "24"

# Async Runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# D-Bus
zbus = "5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error Handling
anyhow = "1"
thiserror = "2"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# System Info
sysinfo = "0.33"

# Nyx internal crates
nyx-widgets = { path = "nyx-widgets" }
