[package]
name = "nyx-compositor"
description = "Nyx OS Wayland compositor built on Smithay"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Compositor
smithay = { version = "0.7", features = [
    "desktop",
    "wayland_frontend",
    "backend_drm",
    "backend_libinput",
    "backend_udev",
    "backend_winit",
    "renderer_glow",
] }
smithay-drm-extras = "0.1"

# Rendering
wgpu = { workspace = true }

# Async
tokio = { workspace = true }
calloop = "0.14"

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Serialization (for config)
serde = { workspace = true }
toml = { workspace = true }
