[package]
name = "nyx-hw"
description = "Nyx OS hardware detection and driver management"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
sysinfo = { workspace = true }
