[package]
name = "nyx-shell"
description = "Nyx OS desktop shell — top bar, dock, app launcher, notifications"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
iced = { workspace = true }
iced_runtime = { workspace = true }
iced_core = { workspace = true }
nyx-widgets = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
sysinfo = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
