[package]
name = "nyx-widgets"
description = "Nyx Lux design system — custom Iced widget library for Nyx OS"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
iced = { workspace = true }
iced_core = { workspace = true }
iced_runtime = { workspace = true }
chrono = { workspace = true }
