[package]
name = "nyx-settings-ui"
description = "Nyx OS settings application — GUI frontend"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
iced = { workspace = true }
nyx-widgets = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
